--- a/css/student-content.css
+++ b/css/student-content.css
@@ -1,4 +1,4 @@
-.content h2 {
+.container h2 {
     font-size: larger;
     margin-top: 5px;
     text-align: center;
